--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.8.0
   flutter_svg: ^2.0.7
+  google_sign_in: ^6.1.5
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
