--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   flutter_svg: ^2.0.7
   google_sign_in: ^6.1.5
   flutter_secure_storage: ^9.0.0
-
+  otp_text_field: ^1.1.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
